more css changes to groups view

--- a/app/assets/templates/groups/animatedIndex.jst.ejs
+++ b/app/assets/templates/groups/animatedIndex.jst.ejs
@@ -1,4 +1,4 @@
-<div id="groups-header" class"row-fluid span10">
+<div id="groups-header" class"row-fluid">
   <a href='#/projects/<%= model.id %>'
      class="btn btn-small group animated pull-left">
        Toggle View: <i class="icon-list"></i>
@@ -18,7 +18,7 @@
 </div>
 
 
-<div id="group-view-container" class="span10 pull-left">
+<div id="group-view-container" class="span10">
   <div id="group-view-content">
 
     <% collection.each(function (group) { %>
