--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,6 @@
 #header {
   width: 100%;
   background: #123c54;
-  border-bottom: 1px solid;
   color: #fefefe;
   padding: 9px 5px;
   height: 30px;
@@ -25,6 +24,7 @@
   }
 
 #content {
+  margin-left: 150px;
   color: #506b7e;
 }
 
@@ -68,7 +68,8 @@
 }
 
 #group-view-container {
-  max-height: 600px;
+  float: left;
+  max-height: 650px;
   border: 1px solid;
   overflow: scroll;
 }
@@ -91,14 +92,30 @@
 }
 
 .task-circle {
-  width: 100px;
-  height: 100px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  border-radius: 50px;
   border: 1px solid;
   z-index: 1;
 }
+  .Large {
+    width: 140px;
+    height: 140px;
+    -webkit-border-radius: 70px;
+    -moz-border-radius: 70px;
+    border-radius: 70px;
+  }
+  .Medium {
+    width: 120px;
+    height: 120px;
+    -webkit-border-radius: 60px;
+    -moz-border-radius: 60px;
+    border-radius: 60px;
+  }
+  .Small {
+    width: 100px;
+    height: 100px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+  }
 
 #new-group {
   float: right;
