--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,5 @@
 <div id="menu" class="span2"></div>
-<div id="content" class="offset2 span10">
+<div id="content" class="">
   <div id="sidebar"></div>
 </div>
 
