due date, messed up styling

--- a/app/assets/templates/projects/index.jst.ejs
+++ b/app/assets/templates/projects/index.jst.ejs
@@ -3,8 +3,8 @@
     <h4>Tasks</h4>
     <div class="menu">
       <a href="#/all/priority">By Priority</a>
-      <!-- <br>
-      <a href="#/all/duedate">By Due Date</a> -->
+      <br>
+      <a href="#/all/duedate">By Due Date</a>
     </div>
   </section>
   <section class="projects">
