--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,6 @@
   background-color: #F1F6F9;
   color: #506B90;
   margin: 0px;
-  padding-left: 10px;
   font-size: 13px;
 }
 
@@ -219,5 +218,35 @@
     background-color: #CCC;
   }
 
+.task-main {
+  width: 200%;
+}
+
+.task-title {
+  width: 30%;
+  height: 50%;
+  float: left;
+}
+
 .task-status {
+  height: 100%;
+  width: 10px;
+  position: relative;
+  float: left;
+  margin-right: 5px;
+
+}
+
+.task-parents {
+  width: 30%;
+  height: 50%;
+  float: left;
+}
+
+#tasks-view {
+  width: 100%;
+}
+
+.task-due-date {
+  float: right;
 }
