--- a/app/assets/templates/groups/animatedIndex.jst.ejs
+++ b/app/assets/templates/groups/animatedIndex.jst.ejs
@@ -17,7 +17,6 @@
   </div>
 </div>
 
-
 <div id="group-view-container" class="span10">
   <div id="group-view-content">
 
@@ -86,6 +85,9 @@
         <h4>New Task</h4>
           <label for="task-title">Title:</label>
           <input type="text" name="task[title]" id="task-title">
+
+          <label for="task-due-date">Due Date:</label>
+          <input type="datetime-local" name="task[due_date]" id="task-due-date">
 
           <label for="task-priority">Priority:</label>
           <select name="task[priority]">
