--- a/app/assets/templates/groups/show.jst.ejs
+++ b/app/assets/templates/groups/show.jst.ejs
@@ -18,9 +18,11 @@
     </div>
     <div class="modal-body">
       <div id="#new-task">
-        <h4>New Task</h4>
           <label for="task-title">Title:</label>
           <input type="text" name="task[title]" id="task-title">
+
+          <label for="task-due-date">Due Date:</label>
+          <input type="datetime-local" name="task[due_date]" id="task-due-date">
 
           <label for="task-priority">Priority:</label>
           <select name="task[priority]" id="task-priority">
