--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,24 +1,35 @@
 <div class="tasks-view">
-  <div id="tasks-header">
-  </div>
   <% collection.each(function(task) { %>
     <div class="task-all-detail">
+
       <div class="priority very-high"></div>
-      <div class="task-title span5">
-          <div class="task-status span1">
-          <% if (task.escape("status") === "In Progress") { %>
-            <i class="icon-play"></i>
-          <% } else if (task.escape("status") === "On Hold") { %>
-            <i class="icon-pause"></i>
-          <% } %>
-          </div>
+
+      <div class="task-status">
+        <% if (task.escape("status") === "In Progress") { %>
+          <i class="icon-play"></i>
+        <% } else if (task.escape("status") === "On Hold") { %>
+          <i class="icon-pause"></i>
+        <% } %>
+      </div>
+
+      <div class="task-title">
         <a id="taskShow" href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
       </div>
-      <div class="task-parents offset1 span5">
+
+      <div class="task-parents">
         <% var group = task.get("group") %>
         <% var project = group.get("project")%>
         <%= project.escape("name") %> > <%= group.escape("name") %>
       </div>
+
+      <div class="task-due-date">
+        <% var date = new Date(task.escape("due_date")); %>
+        Due:  <%= date.toTimeString() %>
+        <br>
+        On: <%= date.toDateString() %>
+      </div>
+
+
     </div>
 
   <% })%>
