--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -7,7 +7,10 @@
 
     <div class="task-attr-container">
       <h4>Due Date:</h4>
-      <%= model.escape("due_date") %>
+      <input type="datetime-local"
+        class="editable-date"
+        id="due_date"
+        value="<%= model.escape('due_date') %>">
     </div>
 
     <div class="task-attr-container">
