--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -1,7 +1,7 @@
 <div class="project">
   <a class="project-name"
     href="#/projects/<%= model.id %>"
-    title="<%= model.escape("name") %>">
+    title="<%= model.escape('name') %>">
     <%= model.escape("name") %>
   </a>
 </div>
