--- a/app/assets/templates/groups/animatedIndex.jst.ejs
+++ b/app/assets/templates/groups/animatedIndex.jst.ejs
@@ -3,7 +3,10 @@
      class="btn btn-small group animated pull-left">
        Toggle View: <i class="icon-list"></i>
   </a>
-
+  <button
+    id="add-collaborators"
+    class="btn btn-small pull-left"
+    style="margin-left: 4px">Add Collaborators</button>
   <div class="span1.5">
     <div id="task-pile"
       class="task-pile pull-right"></div>
@@ -58,8 +61,7 @@
     <h3 id="new-group-form">New Group</h3>
   </div>
   <div class="modal-body">
-    <div id="#new-group">
-      <h4>New Group</h4>
+    <div id="new-group-input">
         Group Name: <input type="text" name="group[name]">
     </div>
   </div>
