--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -3,6 +3,11 @@
       class="btn btn-small group animated">
         Toggle View: <i class="icon-certificate"></i>
     </a>
+
+    <a href="#collaborator-modal"
+      class="btn btn-small" data-toggle="modal">
+      Add Collaborators
+    </a>
 </div>
 
 <div id="groups-view" class="fluid-container">
@@ -25,14 +30,48 @@
     <h3 id="new-group-form">New Group</h3>
   </div>
   <div class="modal-body">
-    <div id="#new-group">
-      <h4>New Group</h4>
+    <div id="new-group-input">
         Group Name: <input type="text" name="group[name]">
     </div>
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
     <button id="submit-new-group" data-dismiss="modal" class="btn btn-primary">
+      Create
+    </button>
+  </div>
+</div>
+
+<div id="collaborator-modal" class="modal hide fade" tabindex="-1"
+  role="form" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+      x
+    </button>
+    <h3>Add a Collaborator</h3>
+  </div>
+
+  <div class="modal-body">
+    <form id="collaborator-form">
+      <input type="hidden"
+        name="collaboration[project_id]"
+        value="<%= model.id %>">
+
+      <label for="collaborator-email">Collaborator's Email:</label>
+      <input type="text"
+        name="collaboration[email_address]"
+        id="collaborator-email">
+    </form>
+  </div>
+
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">
+      Close
+    </button>
+
+    <button id="submit-new-collaborator"
+      data-dismiss="modal"
+      class="btn btn-primary">
       Create
     </button>
   </div>
