tasks don't need due date

--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -56,6 +56,7 @@
       <input type="hidden"
         name="collaboration[project_id]"
         value="<%= model.id %>">
+      <input type="hidden" name="authenticity_token" value="<%= AUTH_TOKEN %>">
 
       <label for="collaborator-email">Collaborator's Email:</label>
       <input type="text"
