--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,6 +58,11 @@
   width: 100%;
 }
 
+#animated-index {
+  margin-left: 0px;
+  padding-left: 0px;
+}
+
 #groups-header {
   width: 100%;
   height: 30px;
@@ -67,14 +72,15 @@
 }
 
 #group-view-container {
-  float: left;
   max-height: 650px;
+  margin-left: 0px;
   border: 1px solid;
   overflow: scroll;
 }
 
 #group-view-content {
   position: relative;
+  background-color: #F1F6F9;
   width: 1500px;
   height: 1500px;
 }
@@ -83,6 +89,7 @@
   text-align: center;
   width: 500px;
   height: 500px;
+  background-color: #F0F9FF;
   -webkit-border-radius: 250px;
   -moz-border-radius: 250px;
   border-radius: 250px;
@@ -97,6 +104,7 @@
   .Large {
     width: 140px;
     height: 140px;
+    background-color: #f2dede;
     -webkit-border-radius: 70px;
     -moz-border-radius: 70px;
     border-radius: 70px;
@@ -104,6 +112,7 @@
   .Medium {
     width: 120px;
     height: 120px;
+    background-color: #fcf8e3;
     -webkit-border-radius: 60px;
     -moz-border-radius: 60px;
     border-radius: 60px;
@@ -111,6 +120,7 @@
   .Small {
     width: 100px;
     height: 100px;
+    background-color: #dff0d8;
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
     border-radius: 50px;
@@ -246,8 +256,4 @@
 #tasks-view {
   width: 100%;
   float: left;
-}
-
-.task-due-date {
-  float: right;
 }
