--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -1,6 +1,6 @@
 <div id="groups-header" class="row-fluid">
     <a href='#/projects/<%= model.id %>/animated'
-      class="btn btn-small group animated">
+      class="btn btn-small animated">
         Toggle View: <i class="icon-certificate"></i>
     </a>
 
