--- a/app/assets/templates/groups/animatedIndex.jst.ejs
+++ b/app/assets/templates/groups/animatedIndex.jst.ejs
@@ -94,40 +94,39 @@
     </div>
     <div class="modal-body">
       <div id="#new-task">
-        <h4>New Task</h4>
-          <label for="task-title">Title:</label>
-          <input type="text" name="task[title]" id="task-title">
+        <label for="task-modal-title">Title:</label>
+        <input type="text" name="task[title]" id="task-modal-title">
 
-          <label for="task-due-date">Due Date:</label>
-          <input type="datetime-local" name="task[due_date]" id="task-due-date">
+        <label for="task-due-date">Due Date:</label>
+        <input type="datetime-local" name="task[due_date]" id="task-due-date">
 
-          <label for="task-priority">Priority:</label>
-          <select name="task[priority]">
-            <% var priorities = ["None", "High","Very High"] %>
-            <% priorities.forEach(function(priority) { %>
-              <option value="<%= priority %>"><%= priority %></option>
-            <% })%>
+        <label for="task-priority">Priority:</label>
+        <select name="task[priority]">
+          <% var priorities = ["None", "High","Very High"] %>
+          <% priorities.forEach(function(priority) { %>
+            <option value="<%= priority %>"><%= priority %></option>
+          <% })%>
 
-          </select>
+        </select>
 
-          <label for="task-effort">Effort:</label>
-          <select name="task[effort]">
-            <% var efforts = ["Small", "Medium","Large"] %>
-            <% efforts.forEach(function(effort) { %>
-              <option value="<%= effort %>"><%= effort %></option>
-            <% })%>
-          </select>
+        <label for="task-effort">Effort:</label>
+        <select name="task[effort]">
+          <% var efforts = ["Small", "Medium","Large"] %>
+          <% efforts.forEach(function(effort) { %>
+            <option value="<%= effort %>"><%= effort %></option>
+          <% })%>
+        </select>
 
-          <label for="task-status">Status:</label>
-          <select name="task[status]">
-            <% var statuses=["Not Started", "In Progress","On Hold", "Completed"] %>
-            <% statuses.forEach(function(status) { %>
-              <option value="<%= status %>"><%= status %></option>
-            <% })%>
-          </select>
+        <label for="task-status">Status:</label>
+        <select name="task[status]">
+          <% var statuses=["Not Started", "In Progress","On Hold", "Completed"] %>
+          <% statuses.forEach(function(status) { %>
+            <option value="<%= status %>"><%= status %></option>
+          <% })%>
+        </select>
 
-          <label for="task-description">Description</label>
-          <textarea name="task[description]" id="task-description"></textarea>
+        <label for="task-description">Description</label>
+        <textarea name="task[description]" id="task-description"></textarea>
 
       </div>
     </div>
