--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -11,7 +11,7 @@
 </div>
 
 <div id="groups-view" class="fluid-container">
-  <div class="offset2 span8">
+  <div class="span12">
     <h2>
       <%= model.escape("name") %>
       <a href="#newgroup" class="btn" data-toggle="modal">
