--- a/app/assets/templates/groups/show.jst.ejs
+++ b/app/assets/templates/groups/show.jst.ejs
@@ -1,4 +1,4 @@
-<div class="group">
+<div class="group container-fluid">
   <h3>
     <%= model.escape("name") %>
     <a href="#groups<%= model.id %>newtask" class="btn" data-toggle="modal">
@@ -18,41 +18,41 @@
     </div>
     <div class="modal-body">
       <div id="#new-task">
-          <label for="task-title">Title:</label>
-          <input type="text" name="task[title]" id="task-title">
+        <label for="task-modal-title">Title:</label>
+        <input type="text" name="task[title]" id="task-modal-title">
 
-          <label for="task-due-date">Due Date:</label>
-          <input type="datetime-local" name="task[due_date]" id="task-due-date">
+        <label for="task-due-date">Due Date:</label>
+        <input type="datetime-local" name="task[due_date]" id="task-due-date">
 
-          <label for="task-priority">Priority:</label>
-          <select name="task[priority]" id="task-priority">
-            <% var priorities = ["None", "High","Very High"] %>
-            <% priorities.forEach(function(priority) { %>
-              <option value="<%= priority %>"><%= priority %></option>
-            <% })%>
+        <label for="task-priority">Priority:</label>
+        <select name="task[priority]" id="task-priority">
+          <% var priorities = ["None", "High","Very High"] %>
+          <% priorities.forEach(function(priority) { %>
+            <option value="<%= priority %>"><%= priority %></option>
+          <% })%>
 
-          </select>
+        </select>
 
-          <label for="task-effort">Effort:</label>
-          <select name="task[effort]" id="task-effort">
-            <% var efforts = ["Small", "Medium","Large"] %>
-            <% efforts.forEach(function(effort) { %>
-              <option value="<%= effort %>"><%= effort %></option>
-            <% })%>
-          </select>
+        <label for="task-effort">Effort:</label>
+        <select name="task[effort]" id="task-effort">
+          <% var efforts = ["Small", "Medium","Large"] %>
+          <% efforts.forEach(function(effort) { %>
+            <option value="<%= effort %>"><%= effort %></option>
+          <% })%>
+        </select>
 
-          <label for="task-status">Status:</label>
-          <select name="task[status]" id="task-status">
-            <% var statuses=["Not Started", "In Progress","On Hold", "Completed"] %>
-            <% statuses.forEach(function(status) { %>
-              <option value="<%= status %>"><%= status %></option>
-            <% })%>
-          </select>
+        <label for="task-status">Status:</label>
+        <select name="task[status]" id="task-status">
+          <% var statuses=["Not Started", "In Progress","On Hold", "Completed"] %>
+          <% statuses.forEach(function(status) { %>
+            <option value="<%= status %>"><%= status %></option>
+          <% })%>
+        </select>
 
-          <label for="task-description">Description</label>
-          <textarea name="task[description]" id="task-description"></textarea>
+        <label for="task-description">Description</label>
+        <textarea name="task[description]" id="task-description"></textarea>
 
-          <input type="hidden" name="task[group_id]" value="<%= model.id %>">
+        <input type="hidden" name="task[group_id]" value="<%= model.id %>">
       </div>
     </div>
     <div class="modal-footer">
