--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -1,4 +1,4 @@
-<div id="groups-header" class="row-fluid">
+<div id="groups-header">
     <a href='#/projects/<%= model.id %>/animated'
       class="btn btn-small animated">
         Toggle View: <i class="icon-certificate"></i>
@@ -10,8 +10,8 @@
     </a>
 </div>
 
-<div id="groups-view" class="fluid-container">
-  <div class="span12">
+<div id="groups-view">
+  <div class="">
     <h2>
       <%= model.escape("name") %>
       <a href="#newgroup" class="btn" data-toggle="modal">
