--- a/app/assets/templates/tasks/priority.jst.ejs
+++ b/app/assets/templates/tasks/priority.jst.ejs
@@ -1,5 +1,7 @@
-<div class="tasks by-priority">
-  <h2>All Tasks By Priority</h2>
+<div class="tasks tasks by-priority">
+  <div class="priority-title">
+      <h2>All Tasks By Priority</h2>
+  </div>
 
   <div class="very-high-priority">
     <h3>Very High</h3>
