--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,18 +25,19 @@ body {
 }
   #title {
     padding-bottom: 15px;
+    margin-left: 15px;
   }
 
 #content {
-  margin-left: 150px;
+  margin-left: 180px;
   color: #506b7e;
 }
 
 #menu {
   position: absolute;
   height: 100%;
+  width: 180px;
   float: left;
-  overflow: scroll;
   background-color: #F1F6F9;
   color: #506B90;
   margin: 0px;
@@ -58,8 +59,8 @@ body {
 }
 
 .tasks {
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 .task-info {
@@ -113,7 +114,7 @@ body {
 .task-circle {
   border: 1px solid;
   text-align: center;
-  z-index: 1;
+  z-index: 5;
 
   filter: alpha(opacity=80); /* internet explorer */
   -khtml-opacity: 0.8;      /* khtml, old safari */
@@ -214,7 +215,6 @@ body {
 }
 
 .task-attr-container {
-  margin: 10px;
 }
 
 #task-show {
