--- a/app/assets/templates/groups/show.jst.ejs
+++ b/app/assets/templates/groups/show.jst.ejs
@@ -1,4 +1,4 @@
-<div class="group container-fluid">
+<div class="group">
   <h3>
     <%= model.escape("name") %>
     <a href="#groups<%= model.id %>newtask" class="btn" data-toggle="modal">
