--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,7 @@
-<div id="menu" class="span2"></div>
-<div id="content">
-  <div id="sidebar"></div>
+<div id="all-content">
+    <div id="menu" class=""></div>
+    <div id="content"></div>
+    <div id="sidebar"></div>
 </div>
 
 <script type="text/javascript" id="projects">
@@ -8,9 +9,7 @@ $(function () {
   DropTask.initialize(
     $("#content"),
     $("#menu"),
-    {
-      projects: <%= @projects.to_json.html_safe %>,
-     }
+    {projects: <%= @projects.to_json.html_safe %>}
   );
 });
 </script>
