--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -94,7 +94,8 @@ body {
   height: 1500px;
 }
 
-.group-circle {
+/*
+  .group-circle {
   text-align: center;
   width: 500px;
   height: 500px;
@@ -146,7 +147,7 @@ body {
     -moz-border-radius: 50px;
     border-radius: 50px;
   }
-
+*/
 #new-group {
   float: right;
 }
@@ -297,6 +298,19 @@ body {
   margin-top:7%;
 }
 
+
 circle {
-  fill: steelblue;
+  fill: rgb(31, 119, 180);
+  fill-opacity: .25;
+  stroke: rgb(31, 119, 180);
+  stroke-width: 1px;
+}
+
+.leaf circle {
+  fill: #ff7f0e;
+  fill-opacity: 1;
+}
+
+text {
+  font: 10px sans-serif;
 }
