add sortable priority order

--- a/app/assets/templates/tasks/priority.jst.ejs
+++ b/app/assets/templates/tasks/priority.jst.ejs
@@ -3,15 +3,15 @@
       <h2>All Tasks By Priority</h2>
   </div>
 
-  <div class="very-high-priority">
+  <div class="very-high-priority" data-priority="Very High">
     <h3>Very High</h3>
   </div>
 
-  <div class="high-priority">
+  <div class="high-priority" data-priority="High">
     <h3>High</h3>
   </div>
 
-  <div class="none-priority">
+  <div class="none-priority" data-priority="None">
     <h3>None</h3>
   </div>
 </div>
