--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,6 +1,6 @@
 <div class="tasks-view">
   <% collection.each(function(task) { %>
-    <div class="task-all-detail">
+    <div class="task-all-detail" data-id="<%= task.id %>">
 
       <div class="task-row">
 
