fix styling of task index views

--- a/app/assets/templates/tasks/priority.jst.ejs
+++ b/app/assets/templates/tasks/priority.jst.ejs
@@ -1,5 +1,5 @@
 <div class="tasks tasks by-priority">
-  <div class="priority-title">
+  <div class="priority-title task-index-title">
       <h2>All Tasks By Priority</h2>
   </div>
 
