--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@ body {
   }
 
 #content {
-  margin-left: 180px;
+  margin-left: 220px;
   color: #506b7e;
 }
 
@@ -42,6 +42,7 @@ body {
   color: #506B90;
   margin: 0px;
   font-size: 13px;
+  padding-left:20px;
 }
 
   section {
@@ -61,6 +62,10 @@ body {
 .tasks {
   width: 100%;
   height: 100%;
+}
+
+.tasks-index {
+  padding:5px;
 }
 
 .task-info {
