--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html>
 <head>
-  <title>DropTask</title>
+  <title>DerpTask</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -11,7 +11,7 @@
 <body>
 <div id="header" class="row-fluid">
   <div id="title" class="span2 pull-left">
-    <h4>DropTask</h4>
+    <h4>DerpTask</h4>
   </div>
 
   <div id="user-info" class="span3 pull-right">
